@@ -6,6 +6,8 @@
 | |___| (__| | | | (_) | |___| (_) | | |  __/
 |______\___|_| |_|\___/ \_____\___/|_|  \___|
 
+IMPORTANT NOTE: THIS REPOSITORY IS NOT DEVELOPED ANYMORE !
+
 Copyright (C) TrinityCore (http://www.trinitycore.org)
 Copyright (C) GaryFisher  (http://www.github.com/garyfisher)
 Copyright (C) FireEmerald (http://www.github.com/FireEmerald)
